Remove CRLF. Ignore failing test. Update pom.

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <packaging>hpi</packaging>
     <version>0.1-SNAPSHOT</version>
     <!--<url>http://wiki.jenkins-ci.org/display/JENKINS/MessageTrigger+Plugin</url>-->
+    <url>https://github.com/nickgrealy/poll-mailbox-trigger</url>
 
     <licenses>
         <license>
@@ -36,10 +37,10 @@
         <xtrigger.lib.version>0.25</xtrigger.lib.version>
     </properties>
 
-    <!--<scm>-->
-    <!--<connection>scm:git:git://github.com/jenkinsci/poll-mailbox-trigger-plugin.git</connection>-->
-    <!--<developerConnection>scm:git:git@github.com:jenkinsci/spoll-mailbox-trigger-plugin.git</developerConnection>-->
-    <!--</scm>-->
+    <scm>
+        <connection>scm:git:git://github.com/nickgrealy/poll-mailbox-trigger.git</connection>
+        <developerConnection>scm:git:git@github.com:nickgrealy/poll-mailbox-trigger.git</developerConnection>
+    </scm>
 
     <dependencies>
         <dependency>
