--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <artifactId>poll-mailbox-trigger</artifactId>
     <packaging>hpi</packaging>
-    <version>0.1</version>
+    <version>0.2-SNAPSHOT</version>
     <!--<url>http://wiki.jenkins-ci.org/display/JENKINS/MessageTrigger+Plugin</url>-->
     <url>https://github.com/nickgrealy/poll-mailbox-trigger</url>
 
