--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <artifactId>poll-mailbox-trigger</artifactId>
     <packaging>hpi</packaging>
-    <version>0.3</version>
+    <version>0.4-SNAPSHOT</version>
     <url>https://github.com/jenkinsci/poll-mailbox-trigger-plugin</url>
 
     <licenses>
