--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <artifactId>poll-mailbox-trigger</artifactId>
     <packaging>hpi</packaging>
-    <version>0.6-ALPHA-SNAPSHOT</version>
+    <version>0.6-SNAPSHOT</version>
     <!-- http://updates.jenkins-ci.org/experimental/update-center.json -->
     <url>http://wiki.jenkins-ci.org/display/JENKINS/poll-mailbox-trigger-plugin</url>
 
