Removed dependency on ScriptTrigger (logs still works). Added Password encryption. Separated host, username and password fields from config.

--- a/pom.xml
+++ b/pom.xml
@@ -58,23 +58,16 @@
     </distributionManagement>
 
     <dependencies>
-        <!--<dependency>-->
-            <!--<groupId>org.jenkins-ci.lib</groupId>-->
-            <!--<artifactId>xtrigger-lib</artifactId>-->
-            <!--<version>${xtrigger.lib.version}</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.jenkins-ci.lib</groupId>
+            <artifactId>xtrigger-lib</artifactId>
+            <version>${xtrigger.lib.version}</version>
+        </dependency>
         <dependency>
             <groupId>com.sun.mail</groupId>
             <artifactId>javax.mail</artifactId>
             <version>1.5.1</version>
         </dependency>
-        <!-- Other Plugins -->
-        <dependency>
-            <groupId>org.jenkins-ci.plugins</groupId>
-            <artifactId>scripttrigger</artifactId>
-            <version>0.31</version>
-        </dependency>
-
     </dependencies>
 
     <repositories>
