--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -10,7 +9,7 @@
 
     <artifactId>poll-mailbox-trigger</artifactId>
     <packaging>hpi</packaging>
-    <version>0.11-SNAPSHOT</version>
+    <version>0.11</version>
     <!-- http://updates.jenkins-ci.org/experimental/update-center.json -->
     <url>http://wiki.jenkins-ci.org/display/JENKINS/poll-mailbox-trigger-plugin</url>
 
@@ -43,7 +42,7 @@
         <developerConnection>scm:git:ssh://git@github.com/jenkinsci/poll-mailbox-trigger-plugin.git
         </developerConnection>
         <url>https://github.com/jenkinsci/poll-mailbox-trigger-plugin</url>
-        <tag>HEAD</tag>
+        <tag>poll-mailbox-trigger-0.11</tag>
     </scm>
 
     <issueManagement>
