--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,12 @@
             <artifactId>javax.mail</artifactId>
             <version>1.5.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.jvnet.mock-javamail</groupId>
+            <artifactId>mock-javamail</artifactId>
+            <version>1.7</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <repositories>
