--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <artifactId>poll-mailbox-trigger</artifactId>
     <packaging>hpi</packaging>
-    <version>0.16-SNAPSHOT</version>
+    <version>0.16</version>
     <!-- http://updates.jenkins-ci.org/experimental/update-center.json -->
     <url>http://wiki.jenkins-ci.org/display/JENKINS/poll-mailbox-trigger-plugin</url>
 
@@ -42,7 +42,7 @@
         <developerConnection>scm:git:ssh://git@github.com/jenkinsci/poll-mailbox-trigger-plugin.git
         </developerConnection>
         <url>https://github.com/jenkinsci/poll-mailbox-trigger-plugin</url>
-        <tag>poll-mailbox-trigger-0.12</tag>
+        <tag>poll-mailbox-trigger-0.16</tag>
     </scm>
 
     <issueManagement>
