--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ jenkinsDisplayName = Poll Mailbox Trigger Plugin
 xtriggerLibVersion = 0.25
 javaxMailVersion = 1.5.1
 
-org.gradle.daemon=true
-org.gradle.parallel=false
-org.gradle.configureondemand=false
-org.gradle.jvmargs=-Xms256m -Xmx1024m -XX:MaxPermSize=256M
+org.gradle.daemon=false
+#org.gradle.parallel=false
+#org.gradle.configureondemand=false
+#org.gradle.jvmargs=-Xms256m -Xmx1024m -XX:MaxPermSize=256M
