Fixing issues JENKINS-32842 , JENKINS-33136

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,9 @@ description = A Jenkins plugin, to poll an email inbox, and trigger jobs based o
 version = 1.021-SNAPSHOT
 
 jenkinsDisplayName = Poll Mailbox Trigger Plugin
-xtriggerLibVersion = 0.25
-javaxMailVersion = 1.5.1
 
-org.gradle.daemon=false
+xtrigger_version = 0.25
+javaxmail_version = 1.5.1
+cucumber_version = 1.2.4
+
+org.gradle.daemon = false
