--- a/gradle/common.gradle
+++ b/gradle/common.gradle
@@ -25,7 +25,7 @@ dependencies {
 
 ext {
     groovyVersion = '2.4.4'
-    customJvmArgs = ['-XX:MaxPermSize=128m', '-Xmx128m']
+    customJvmArgs = ['-Xmx128m']
 }
 
 configurations {
