--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'org.jenkins-ci.tools:gradle-jpi-plugin:0.12.2'
+        classpath 'org.jenkins-ci.tools:gradle-jpi-plugin:0.15.0'
     }
 }
 
@@ -49,7 +49,20 @@ jenkinsPlugin {
 }
 
 dependencies {
-	compile "org.jenkins-ci.lib:xtrigger-lib:$xtriggerLibVersion"
-    compile "com.sun.mail:javax.mail:$javaxMailVersion"
+    compile "org.jenkins-ci.lib:xtrigger-lib:$xtrigger_version"
+    compile "com.sun.mail:javax.mail:$javaxmail_version"
+    testCompile('org.hamcrest:hamcrest-core:1.3') { force = true }
+    testCompile('junit:junit:4.11') { force = true }
     testCompile 'org.jvnet.mock-javamail:mock-javamail:1.7'
+    testCompile 'org.mockito:mockito-all:1.10.19'
+    // bdd testing
+    testCompile "info.cukes:cucumber-junit:$cucumber_version"
+    testCompile "info.cukes:cucumber-java8:$cucumber_version"
+}
+
+/**
+ * We must exclude the junit-dep dependency, because it is clashing with junit when we run the AcceptanceTests.
+ */
+configurations.findAll {!it.name.endsWith('junit-dep')}.each { conf ->
+    conf.exclude group: "junit", module: "junit-dep"
 }
