--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,17 @@
 language: java
+sudo: true
+jdk:
+  - oraclejdk8
+  - oraclejdk7
+  - oraclejdk6
+  - openjdk7
+#script: ./gradlew clean test
 before_install:
   - pip install codecov
 after_success:
   - codecov
+notifications:
+  # Email notifications are disabled to not annoy anybody.
+  # See http://about.travis-ci.org/docs/user/build-configuration/ to learn more
+  # about configuring notification recipients and more.
+  email: false
