--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,31 @@
 language: java
 sudo: required
 jdk:
-  - oraclejdk8
   - oraclejdk7
-  - oraclejdk6
-  - openjdk7
+
+#  - oraclejdk8
+#  - oraclejdk6
+#  - openjdk7
 #script: ./gradlew clean test
+
+# enable codecov reporting...
 before_install:
   - pip install codecov
 after_success:
   - codecov
+
+
+# Email notifications are disabled to not annoy anybody.
+# See http://about.travis-ci.org/docs/user/build-configuration/ to learn more
+# about configuring notification recipients and more.
 notifications:
-  # Email notifications are disabled to not annoy anybody.
-  # See http://about.travis-ci.org/docs/user/build-configuration/ to learn more
-  # about configuring notification recipients and more.
   email: false
+
+
+# enable gradle dependency caching...
+before_cache:
+  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
