--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ jdk:
 
 # enable codecov reporting...
 before_install:
-  - pip install codecov
+  - sudo pip install codecov
 after_success:
   - codecov
 
