--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 sudo: required
 jdk:
-  - oraclejdk9
+#  - oraclejdk9
   - oraclejdk8
   - oraclejdk7
 #  - oraclejdk6 - End of life
