--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ gradlew publish - Deploy your plugin to the Jenkins Maven repository to be inclu
 gradlew server - Start a local instance of Jenkins (http://localhost:8080) with the plugin pre-installed for testing and debugging.
  */
 
+ext.enforceJavaVersion = 1.6
+
 apply plugin: 'org.jenkins-ci.jpi'
 apply from: "$rootDir/gradle/common.gradle"
 apply plugin: 'jacoco'
@@ -61,11 +63,11 @@ jenkinsPlugin {
 dependencies {
     compile "org.jenkins-ci.lib:xtrigger-lib:0.25"
     compile "com.sun.mail:javax.mail:1.5.1"
+
     testCompile('org.hamcrest:hamcrest-core:1.3') { force = true }
     testCompile('junit:junit:4.12') { force = true }
     testCompile 'org.jvnet.mock-javamail:mock-javamail:1.9'
     testCompile 'org.mockito:mockito-all:1.10.19'
-    // bdd testing
     testCompile "info.cukes:cucumber-junit:1.2.4"
     testCompile "info.cukes:cucumber-java:1.2.4"
 }
