--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ gradlew server - Start a local instance of Jenkins (http://localhost:8080) with 
 ext.enforceJavaVersion = 1.6
 
 apply plugin: 'org.jenkins-ci.jpi'
-apply from: "$rootDir/gradle/common.gradle"
+apply from: "$rootDir/config/gradle/common.gradle"
 apply plugin: 'jacoco'
 
 repositories {
@@ -42,6 +42,9 @@ jacocoTestReport {
 }
 
 check.dependsOn jacocoTestReport
+jpi.doLast {
+    verifySize(file(jpi.archivePath), 700)
+}
 
 jenkinsPlugin {
     coreVersion = '1.581'
