--- a/config/gradle/common.gradle
+++ b/config/gradle/common.gradle
@@ -7,7 +7,7 @@ idea.project?.vcs = 'Git'
 
 ext {
     /* optional - set variable enforceJavaVersion */
-    enforceVersionFlag = project.getProperties().containsKey('enforceJavaVersion')
+    enforceJavaVersionFlag = project.getProperties().containsKey('enforceJavaVersion')
     javaVersion = project.getProperties().get('enforceJavaVersion') ?: JavaVersion.VERSION_1_6
     compileTasks = [compileJava, compileTestJava, compileGroovy, compileTestGroovy]
 }
@@ -74,16 +74,16 @@ allprojects {
     }
 }
 
-subprojects {
-    apply from: "$rootDir/gradle/idea.gradle"
-}
+//subprojects {
+//    apply from: "$rootDir/gradle/idea.gradle"
+//}
 
 // enforce version...
 
-task enforceVersion << {
-    if (enforceVersionFlag){
+task enforceJavaVersionTask << {
+    if (enforceJavaVersionFlag){
         def foundVersion = JavaVersion.current()
-        if (foundVersion != enforceJavaVersion){
+        if (foundVersion.toString() != enforceJavaVersion.toString()){
             throw new IllegalStateException("Wrong Java version; required is $enforceJavaVersion, but found $foundVersion")
         }
     } else {
@@ -91,8 +91,14 @@ task enforceVersion << {
     }
 }
 
-compileTasks*.dependsOn(enforceVersion);
+compileTasks*.dependsOn(enforceJavaVersionTask);
 
 task showMeCache << {
   configurations.compile.each { println it }
+}
+
+ext.verifySize = { File file, int expectedSizeKB ->
+    def actualSizeBytes = file.length()
+    println "Output file size is: ${(int) actualSizeBytes / 1024} KB"
+    assert actualSizeBytes < (expectedSizeKB * 1024)
 }
