--- a/build.gradle
+++ b/build.gradle
@@ -21,29 +21,19 @@ gradlew server - Start a local instance of Jenkins (http://localhost:8080) with 
  */
 
 ext.enforceJavaVersion = 1.6
+ext.ignoreFailures = true
 
 apply plugin: 'org.jenkins-ci.jpi'
 apply from: "$rootDir/config/gradle/common.gradle"
-apply plugin: 'jacoco'
+apply from: "$rootDir/config/gradle/staticCodeAnalysis.gradle"
 
 repositories {
+    mavenLocal()
     mavenCentral()
     jcenter()
     maven {
         url 'http://repo.jenkins-ci.org/releases/'
     }
-}
-
-jacocoTestReport {
-    reports {
-        xml.enabled = true
-        html.enabled = true
-    }
-}
-
-check.dependsOn jacocoTestReport
-jpi.doLast {
-    verifySize(file(jpi.archivePath), 700)
 }
 
 jenkinsPlugin {
@@ -80,4 +70,39 @@ dependencies {
  */
 configurations.findAll {!it.name.endsWith('junit-dep')}.each { conf ->
     conf.exclude group: "junit", module: "junit-dep"
+}
+
+jpi.outputs.upToDateWhen { false }
+jpi.doLast {
+    verifySize(file(jpi.archivePath), 637)
+}
+
+task unzip(type: Copy) {
+    from zipTree(file("$buildDir/libs/poll-mailbox-trigger-plugin.hpi"))
+    into file("${buildDir}/unpacked/dist")
+}
+
+unzip.dependsOn jpi
+
+configurations.runtime {
+    resolutionStrategy {
+        force 'commons-codec:commons-codec:1.8'
+        force 'org.jenkins-ci:trilead-ssh2:build217-jenkins-5'
+        force 'commons-io:commons-io:2.4'
+        force 'org.codehaus.groovy:groovy-all:1.8.9'
+        force 'org.kohsuke.stapler:stapler:1.228'
+        force 'org.jenkins-ci:annotation-indexer:1.7'
+        force 'commons-beanutils:commons-beanutils:1.8.3'
+        force 'commons-lang:commons-lang:2.6'
+        force 'commons-logging:commons-logging:1.1.3'
+        force 'commons-collections:commons-collections:3.2.1'
+        force 'jaxen:jaxen:1.1-beta-11'
+        force 'net.java.dev.jna:jna:3.4.0'
+        force 'org.jvnet.localizer:localizer:1.10'
+        force 'org.springframework:spring-core:2.5.6.SEC03'
+        force 'com.google.guava:guava:14.0'
+        force 'com.jcraft:jzlib:1.1.3'
+        force 'org.springframework:spring-beans:2.5.6.SEC03'
+        force 'org.springframework:spring-context:2.5.6.SEC03'
+    }
 }
