--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,6 @@ gradlew server - Start a local instance of Jenkins (http://localhost:8080) with 
  */
 
 ext.enforceJavaVersion = 1.6
-ext.ignoreFailures = true
 
 apply plugin: 'org.jenkins-ci.jpi'
 apply from: "$rootDir/config/gradle/common.gradle"
@@ -74,7 +73,7 @@ configurations.findAll {!it.name.endsWith('junit-dep')}.each { conf ->
 
 jpi.outputs.upToDateWhen { false }
 jpi.doLast {
-    verifySize(file(jpi.archivePath), 637)
+    verifySize(file(jpi.archivePath), 638)
 }
 
 task unzip(type: Copy) {
@@ -83,6 +82,8 @@ task unzip(type: Copy) {
 }
 
 unzip.dependsOn jpi
+
+findbugs { sourceSets = [sourceSets.main] }
 
 configurations.runtime {
     resolutionStrategy {
