--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,8 @@ version = 1.023-SNAPSHOT
 jenkinsDisplayName = Poll Mailbox Trigger Plugin
 
 org.gradle.daemon = false
+
+# Set system properties
+systemProp.stapler.trace = false
+systemProp.stapler.jelly.noCache = false
+systemProp.debug.YUI = false
