--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,10 @@ dependencies {
     compile "org.jenkins-ci.lib:xtrigger-lib:0.25"
     compile "com.sun.mail:javax.mail:1.5.1"
 
+    // Useful for interrogating the injected environment variables...
+//    compile "org.jenkins-ci.plugins:envinject:1.92.1"
+//    compile("org.jenkins-ci.lib:envinject-lib:1.23"){ force = true }
+
     testCompile('org.hamcrest:hamcrest-core:1.3') { force = true }
     testCompile('junit:junit:4.12') { force = true }
     testCompile 'org.jvnet.mock-javamail:mock-javamail:1.9'
@@ -66,7 +70,7 @@ configurations.findAll {!it.name.endsWith('junit-dep')}.each { conf ->
 
 jpi.outputs.upToDateWhen { false }
 jpi.doLast {
-    verifySize(file(jpi.archivePath), 638)
+    verifySize(file(jpi.archivePath), 639)
 }
 
 task unzip(type: Copy) {
